# hoymiles-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
src/: HoymilesMicroinverter.hpp  device_info_test_main.cpp  hoymiles_cpp.cpp  ping_test_main.cpp
